# EasyKit

./: .gitignore  .gitmodules  EasyKit.nsi  EasyKit.nsi.original  EasyKit.sln  EasyKitInstaller.iss  MIGRATION_GUIDE.md  README.md  Release-win-x64.iss  Release-win-x86.iss  build_nsis_installer.bat  build_package.bat  check_software_eskit.bat  composer_eskit.bat  config_eskit.bat  create_release.bat  create_shortcuts_eskit.bat  easykit.nsi  fix_nsis_script.bat  fixed-workflow.yml  git_eskit.bat  install_eskit.bat  laravel_eskit.bat  new-workflow.yml  npm_eskit.bat  prepare_for_github_actions.bat  pyproject.toml  report.md  requirements.txt  run_easykit.py  run_easykit.spec  run_eskit.bat  spec.md  temp_workflow.yml  update_eskit.bat  verify_github_actions_setup.bat
.github/: FUNDING.yml  copilot-instructions.md
CommonUtilities/: CommonUtilities.csproj  GlobalUsings.cs  Program.cs
EasyKit/: ConfigureService.cs  ConfigureServices.cs  EasyKit.csproj  GlobalUsings.cs  Program.cs
ISS/: Common.iss  ContextMenu-win-x64.reg  ContextMenu-win-x86.reg  Release-win-x64.iss  Release-win-x86.iss
config/: config_eskit.bat  user_config_eskit.bat
docs/: 3.0.0-release-notes.md  3.1.9-release-notes.md  3.2.0-release-notes.md  3.2.1-release-notes.md  github_actions_fix.md  release_notes_v1.2.5.md  release_notes_v1.2.6.md  release_notes_v1.2.7.md  release_notes_v1.2.8.md
easykit/: __init__.py  __main__.py  cli.py  utils.py
installer/: EasyKit.nsi  EasyKit.nsi.github  EasyKit.wxs  easykit.nsi
release/: check_software_eskit.bat  composer_eskit.bat  laravel_eskit.bat  (+2 more)
(+173 files in other folders)
